added debug helper

--- a/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
+++ b/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
@@ -16,7 +16,7 @@
 			<!--TODOZ: add one of each control from pi-samples to test Utils & CSS -->
 			<form id="property-inspector">
 				<div class="sdpi-item">
-					<div data-localize class="sdpi-item-label">Name</div>
+					<div data-localize class="sdpi-item-label">ApiKey</div>
 					<input
 						class="sdpi-item-value"
 						name="name"
@@ -27,7 +27,7 @@
 
 				<div type="textarea" class="sdpi-item">
 					<div class="sdpi-item-label up20" data-localize>
-						Message
+						Command
 					</div>
 					<div class="sdpi-item-value textarea">
 						<textarea
@@ -47,7 +47,7 @@
 						data-localize
 						id="open-external"
 					>
-						Click Me
+						Refresh server list
 					</button>
 				</div>
 			</form>
