--- a/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
+++ b/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
@@ -38,8 +38,7 @@
 				<div class="sdpi-item">
 					<div class="sdpi-item-label" data-localize>Servidores</div>
 					<select id="pterodactyl_api_server" name="pterodactyl_api_server" data-localize class="sdpi-item-value" >
-						<option value="volvo">http://localhost:9090</option>
-						<option value="volvo">http://localhost:8080</option>
+						<option value="a5ec39b0">EnxadaHost Minecraft Server</option>
 					</select>
 				</div>
 
