--- a/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
+++ b/src/com.robertocpaes.pterodactyl.sdPlugin/actions/template/property-inspector/inspector.html
@@ -40,8 +40,18 @@
 					<select id="pterodactyl_api_server" name="pterodactyl_api_server" data-localize class="sdpi-item-value" >
 						<option value="a5ec39b0">EnxadaHost Minecraft Server</option>
 					</select>
+					
 				</div>
+<div class="sdpi-item">
+					<div class="sdpi-item-label" data-localize>Button</div>
+					<button
+											class="sdpi-item-value"
 
+						id="refresh_servers"
+					>
+						Refresh
+					</button>
+				</div>
 				<div type="textarea" class="sdpi-item">
 					<div class="sdpi-item-label up20" data-localize>
 						Command
@@ -56,17 +66,7 @@
 					</div>
 				</div>
 
-				<div class="sdpi-item">
-					<div class="sdpi-item-label" data-localize>Button</div>
-					<button
-						class="sdpi-item-value"
-						value="Click Me"
-						data-localize
-						id="open-external"
-					>
-						Refresh server list
-					</button>
-				</div>
+				
 			</form>
 		</div>
 
